# conllx-py

./: Cargo.toml  README.md
src/: decoder.rs  lemma.rs  lib.rs  reader.rs  sentence.rs  util.rs
