[package]
name = "conllx-py"
version = "0.1.0"
authors = ["Tobias Pütz <tobias.puetz@uni-tuebingen.de>"]
edition = "2018"
description = "conllx python module largely based on edit-tree-py, sticker and sticker-python"
license = "BlueOak-1.0.0"

[lib]
name = "conllx"
crate-type = ["cdylib"]

[dependencies.pyo3]
version = "0.10.1"
features = ["extension-module"]


[dependencies]
conllx = {git = "https://github.com/twuebi/conllx-rs", rev="cddba60"}
stdinout = "0.4"
rand = "0.7"
rand_xorshift = "0.2"
sticker-encoders = {git = "https://github.com/twuebi/sticker-encoders", branch="conllx-py"}
failure = "0.1"
edit-tree-py = {git = "https://github.com/twuebi/edit_tree_py"}
serde = { version = "1.0", features = ["derive", "rc"] }
serde_json = "1.0"
serde_cbor = "0.11"
bincode2 = "2.0.1"
numberer = "0.2"